# tree-sitter-crystal-walnut

./: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-crystalwalnut.pc.in  tree-sitter-cwal.h  tree-sitter-cwal.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_crystalwalnut/: __init__.py  binding.c
bindings/python/tree_sitter_cwal/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCrystalwalnut/: crystalwalnut.h
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: binary_items.txt  comments.txt  complex.txt  data.txt  dict.txt  edge_cases.txt  items.txt  ops.txt  predicate_exprs.txt  program.txt  types.txt
